<resources>
    <string name="app_name">Otosales</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="prefix_id_code">+62</string>
    <string name="rupiah_code">Rp</string>
    <string name="welcome_back">Selamat Datang\nKembali!</string>
    <string name="slogan">Temukan Kendaraan Impian Kamu\nDengan Mudah!</string>
    <string name="register">Daftar</string>
    <string name="already_account">Saya Sudah Memiliki Akun</string>
    <string name="we_will_send_u_verification_code">Kami akan mengirimkan kamu kode verifikasi</string>
    <string name="next">Selanjutnya</string>
    <string name="input_your_phone_number">Masukkan\nNomor Hp Kamu</string>
    <string name="fill_verification_code">Masukkan Kode Verifikasi</string>
    <string name="we_was_send_your_verification_code_to_number">Kami telah mengirim kode verifikasi ke nomor</string>
    <string name="verification">Verifikasi</string>
    <string name="input_your_name">Masukkan Nama Kamu</string>
    <string name="input_your_name_like_name_in_ktp">Pastikan nama yang kamu masukkan\nsesuai dengan KTP ya!</string>
    <string name="finish">Selesai</string>
    <string name="home">Beranda</string>
    <string name="article">Artikel</string>
    <string name="transaction">Transaksi</string>
    <string name="welcome">Selamat Datang,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Sortir</string>
    <string name="search_product">Cari Produk</string>
    <string name="select_location">Pilih Lokasi</string>
    <string name="set">Terapkan</string>
    <string name="buy">Beli</string>
    <string name="description">Deskripsi</string>
    <string name="dummy_product_desc">2021 Toyota Avanza 1.3 G MPV Keunggulan Toyota Avanza 2010.\n\n“Keunggulan paling utama dari Toyota Avanza tahun 2010 adalah dia menganut sistem rear-wheel-drive (RWD). \n\n Di sisi lain, Toyota Avanza juga bukanlah mobil yang rewel sehingga perawatan bisa dilakukan dengan mudah. \n\n “Modelnya itu tak lekang oleh waktu.</string>
    <string name="color_available">Warna Tersedia</string>
    <string name="buy_now">Beli Sekarang</string>
    <string name="specification">Spesifikasi</string>
    <string name="cc">CC</string>
    <string name="engine_type">Tipe Mesin</string>
    <string name="max_torque">Torsi Maksimal</string>
    <string name="transmission">Transmisi</string>
    <string name="type">Tipe</string>
    <string name="credit_simulation">Simulasi Kredit</string>
    <string name="discussion">Diskusi</string>
    <string name="review">Ulasan</string>
    <string name="select_type">Pilih Tipe</string>
    <string name="order_summary">Rincian Pesanan</string>
    <string name="transaction_id">ID Transaksi</string>
    <string name="search_article">Cari Artikel</string>
    <string name="car">Mobil</string>
    <string name="motorcycle">Motor</string>
    <string name="dana_tunai">Dana Tunai</string>
    <string name="your_location">Lokasi Kamu</string>
    <string name="edit">Ubah</string>
    <string name="edit_account">Edit Akun</string>
    <string name="logout">Keluar</string>
    <string name="choose_type">Pilih Tipe Kendaraan</string>
    <string name="kredit">Kredit</string>
    <string name="tunai">Tunai</string>
    <string name="choose_tenor">Pilih Tenor</string>
    <string name="total_price">Total Harga</string>
    <string name="detail_price">Rincian Harga</string>
    <string name="text_total_dp">Total Down Payment( DP )</string>
    <string name="per_month">/ Bulan</string>
    <string name="tenor">Tenor</string>
    <string name="cash_price">Harga Cash Keras</string>
    <string name="save_transaction">Simpan Transaksi</string>
    <string name="empty_transaction_title">Transaksi Kamu Masih Kosong :(</string>
    <string name="add_transaction">Tambah Transaksi</string>
    <string name="my_favorite">Favorit Saya</string>
    <string name="other">Lainnya</string>
    <string name="ask_something">Tanyakan Sesuatu</string>
    <string name="reply">Balas</string>
    <string name="continue_to_payment">Lanjutkan</string>
    <string name="cancel">Batalkan</string>
    <string name="make_sure_your_order_is_right">Pastikan pesanan kamu sudah sesuai, selanjutnya kamu akan masuk ke proses pembayaran.</string>
    <string name="booking_payment">Tanda Pembayaran</string>
    <string name="copy">Salin</string>
    <string name="select_bank_for_payment">Pilih Bank Tujuan</string>
    <string name="your_account_is_unverified">Akun Anda Belum Di Verifikasi</string>
    <string name="tos">Persyaratan Layanan</string>
    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="terms_and_condition">Syarat dan Ketentuan</string>
    <string name="help_center">Pusat Bantuan</string>
    <string name="personal_information">Informasi Pribadi</string>
    <string name="make_sure_in_booking_payment">Pastikan anda transfer sesuai nominal yang tertera agar memudahkan kami dalam melakukan proses verifikasi pembayaran</string>
    <string name="subtitle_booking_payment">Ini merupakan proses pertama dalam pembelian anda, pembayaran disini akan mengurangi total DP anda.</string>
    <string name="payment_under_review">Pembayaran\nSedang Di Verifikasi</string>
    <string name="understand">Mengerti</string>
    <string name="q1">Q: Berapa Lama Proses Verifikasi Dilakukan?</string>
    <string name="a_q1">A: Biasanya proses ini memerlukan waktu 1x24 jam di hari kerja. Bila terjadi keterlambatan, maka paling lambat adalah 7x24 Jam Hari Kerja.</string>
    <string name="q_2">Q: Apakah Uang Saya Tetap Aman?</string>
    <string name="a_q2">A: Ya, Tentu saja uang anda akan aman bersama kami saat kami memproses pembayaran. Saat pembayaran sudah kami cek dan benar kami terima, maka sistem akan otomatis mengubahnya menjadi berhasil dibayar.</string>
    <string name="loading">Memuat Data</string>
    <string name="request_dana_tunai">Ajukan Dana Tunai</string>
    <string name="dana_tunai_description">Dapatkan pinjaman mudah dengan bunga yang rendah hanya di otosales.id</string>
    <string name="full_name_equal_ktp">Nama Lengkap Sesuai KTP</string>
    <string name="email">Email</string>
    <string name="request_now">Ajukan Sekarang</string>
    <string name="select_guarantee">Pilih Jaminan</string>
    <string name="skip">Lewati</string>
    <string name="skip_process">Lewati Proses?</string>
    <string name="skip_login_description">Anda Akan Diarahkan Langung Kedalam Aplikasi Tanpa Perlu Masuk Kedalam Akun Anda.</string>
    <string name="continue_anyway">Lanjutkan</string>
    <string name="favorite_empty">Belum ada yang di Favoritkan nih.</string>
    <string name="approved_date">Tanggal Diterima</string>
    <string name="processed_by">Di Proses Oleh</string>
    <string name="report_prpblem">Laporkan Masalah</string>
    <string name="payment_success">Pembayaran Berhasil!</string>
    <string name="detail_problem">Detail Masalah</string>
    <string name="input_message">Masukkan Pesan</string>
    <string name="payment_failed">Pembayaran Gagal</string>
    <string name="reject_reason">Alasan Ditolak</string>
    <string name="brand">Brand</string>
</resources>