<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.WelcomeActivity">

    <TextView
        android:id="@+id/textSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:background="@drawable/all_rounded_128"
        android:backgroundTint="@color/blue_primary_30"
        android:textColor="@color/blue_primary"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:src="@drawable/ic_logo_02"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blue_primary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16sp"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_electric_car_bro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:backgroundTint="@color/blue_primary"
            app:cornerRadius="8dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/already_account"
            android:textColor="#5C5C5C" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>