<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InputPhoneNumberActivity">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_your_phone_number"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/we_will_send_u_verification_code" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefix_id_code"
                android:textColor="@color/black"
                android:textSize="24sp" />


            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="12"
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:hint="XXX"
                android:inputType="number"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="8dp"
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/next"
        app:backgroundTint="@color/blue_primary" />

</RelativeLayout>