<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DanaTunaiActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="@string/dana_tunai"
        android:textColor="@color/black"
        android:textSize="24dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layoutAction"
        android:layout_marginVertical="16dp"
        app:layout_anchorGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/browser_actions_bg_grey"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageDanaTunai"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_dana_tunai" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_toStartOf="@id/imageDanaTunai"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textDanaTunaiTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_dana_tunai"
                        android:textColor="@color/blue_primary"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_marginTop="8dp"
                        android:id="@+id/textDanaTunaiDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dana_tunai_description"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/full_name_equal_ktp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:id="@+id/inputFullName"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/phone_number"
                    app:prefixText="@string/prefix_id_code"
                    app:prefixTextColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="13"
                        android:id="@+id/inputPhoneNumber"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:id="@+id/inputEmail"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/your_location"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/inputLocation"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/browser_actions_bg_grey"
                    android:layout_margin="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_guarantee"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:textSize="18sp"
                    android:id="@+id/textSelectGuarantee"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardCar"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardBackgroundColor="@color/white">

                        <LinearLayout
                            android:padding="16dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView

                                android:id="@+id/imageCar"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:src="@drawable/ic_car"/>

                            <TextView
                                android:layout_marginTop="4dp"
                                android:id="@+id/textCar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/car"
                                android:textSize="16sp"
                                android:textColor="@color/black"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardBike"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardBackgroundColor="@color/white">

                        <LinearLayout
                            android:padding="16dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageBike"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:src="@drawable/ic_scooter"/>

                            <TextView
                                android:layout_marginTop="4dp"
                                android:id="@+id/textBike"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/motorcycle"
                                android:textSize="16sp"
                                android:textColor="@color/black"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <RadioGroup
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioGroup">

                    <RadioButton
                        android:id="@+id/rbAtasNamaSendiri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="BPKB Atas Nama Sendiri"/>

                    <RadioButton
                        android:id="@+id/rbAtasNamaOrangLain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="BPKB Atas Nama Orang Lain"/>
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonRequestNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/blue_primary"
                    android:layout_margin="8dp"
                    android:textColor="@color/white"
                    android:text="@string/request_now"/>

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>