<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OtpActivity">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_verification_code"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/we_was_send_your_verification_code_to_number" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@null"
            android:hint="XXXXXX"
            android:maxLength="6"
            android:inputType="number"
            android:textSize="24sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="8dp"
        android:id="@+id/buttonVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/verification"
        app:backgroundTint="@color/blue_primary" />

</RelativeLayout>